# betta-extras

./: meson.build
data/: b-cam-viewer.desktop  com.github.scojo202.betta-extras.gschema.xml  compile_schemas.sh  meson.build
docs/reference/: meson.build  y-data-sections.txt
src/: b-arv-image-source.c  b-arv-image-source.h  b-arv-source.c  b-arv-source.h  b-cam-viewer.c  b-camera-settings-grid.c  b-camera-settings-grid.h  b-camera-settings-grid.ui  b-data-derived.c  b-data-derived.h  b-extras.gresource.xml  b-extras.h  b-fft-operation.c  b-fft-operation.h  b-hdf.c  b-hdf.h  b-image.c  b-image.h  b-linear-range.c  b-linear-range.h  b-operation.c  b-operation.h  b-scalar-property.c  b-scalar-property.h  b-simple-operation.c  b-simple-operation.h  b-slice-operation.c  b-slice-operation.h  b-subset-operation.c  b-subset-operation.h  b-vector-ring.c  b-vector-ring.h  b-video-window.c  b-video-window.h  b-video-window.ui  meson.build  y-data-derived.c  y-data-derived.h  y-extras.h  y-fft-operation.h  (+13 more)
src/gtk/: menus.ui
test/: meson.build  testdata.c  testhdf5.c  testsignals.c
